@@ -1,6 +1,6 @@
 ---
 name: Config-Model-TkUI
-version: 1.210
+version: 1.211
 author:
   - Dominique Dumont (ddumont at cpan dot org)
 abstract: Tk GUI to edit config data through Config::Model
@@ -8,7 +8,7 @@ license: lgpl
 resources:
   license: http://opensource.org/licenses/lgpl-license.php
 requires:
-  Config::Model: 0.637
+  Config::Model: 0.638
   Exception::Class: 0
   Log::Log4perl: 1.11
   Tk: 0
@@ -49,7 +49,7 @@ provides:
     version: 1.0910
   Config::Model::TkUI:
     file: lib/Config/Model/TkUI.pm
-    version: 1.210
+    version: 1.211
 generated_by: Module::Build version 0.33
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
